--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -14,9 +14,9 @@ jobs:
       - name: Build and Deploy
         uses: Azure/static-web-apps-deploy@v1
         with:
-          action: "upload"   # <— THIS fixes “deployment_action was not provided”
+          action: upload
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_BLACK_ROCK_04CD9FB0F }}
-          app_location: "OneCalendar"   # folder that contains index.html (no leading slash)
-          output_location: ""           # no build output folder
+          app_location: "/"      # your index.html is at the repo root
+          output_location: ""    # no build output folder
           skip_app_build: true
           skip_api_build: true
