--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -1,7 +1,6 @@
 name: Azure Static Web Apps CI/CD
 on:
-  push:
-    branches: [ "main" ]
+  push: { branches: [ "main" ] }
   workflow_dispatch:
 
 jobs:
@@ -9,12 +8,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      # sanity check: ensures the secret is present and looks like a JWT (has two dots)
+      - name: Check token
+        env:
+          TOKEN: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+        run: |
+          if [ -z "$TOKEN" ]; then
+            echo "AZURE_STATIC_WEB_APPS_API_TOKEN is missing"; exit 1; fi
+          DOTS=$(printf "%s" "$TOKEN" | tr -cd '.' | wc -c)
+          if [ "$DOTS" -lt 2 ]; then
+            echo "Token doesn't look right (expected a JWT)"; exit 1; fi
+
       - uses: Azure/static-web-apps-deploy@v1
         with:
           action: upload
-          # Use the secret you will add in step C below
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          app_location: "/"     # index.html is at repository root
-          output_location: ""   # no build folder
+          app_location: "/"       # index.html is at repo root
+          output_location: ""     # no build output
           skip_app_build: true
           skip_api_build: true
